[tool.poetry]
name = "resume-matching"
version = "0.1.0"
description = "A Flask app for resume matching"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.0"
docx2txt = "^0.8"
spacy = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
